k3s/opentelemetry/mqtt-visibility.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mqtt-visibility
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: emqx
  ingress:
  - fromEntities:
    - all
    toPorts:
    - ports:
      - port: "1883"
        protocol: TCP
      rules:
        l7proto: mqtt
        l7:
        - {}
    - ports:
      - port: "18083"
        protocol: TCP
      # Metrics port
